--- a/tabs.html
+++ b/tabs.html
@@ -661,6 +661,98 @@
                             </div>
                         </div>
                     </div>
+
+<div class="accordion-type-1">
+                <div class="row">
+                    <div class="col accordion-column">
+                        <div class="accordion-wrapper">
+                            <div class="accordion">
+                                <p class="accordion-header">About Us</p>
+                                <div class="accordion-body" style="display: none;">
+                                    <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
+                                        himenaeos. Nam nec ante. Sed lacinia, urna non tincidunt mattis, tortor neque
+                                        adipiscing diam, a cursus.</p>
+                                </div>
+                            </div>
+                            <div class="accordion">
+                                <p class="accordion-header">Marketing Strategy</p>
+                                <div class="accordion-body" style="display: none;">
+                                    <p>Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem at dolor.
+                                        Maecenas mattis. Sed convallis tristique sem. Proin ut ligula vel nunc egestas
+                                        porttitor. Morbi lectus risus, iaculis convallis. </p>
+                                </div>
+                            </div>
+                            <div class="accordion">
+                                <p class="accordion-header">Development Experience</p>
+                                <div class="accordion-body">
+                                    <p>Sed lectus. Integer euismod lacus luctus magna. Quisque cursus, metus vitae
+                                        pharetra
+                                        auctor, sem massa mattis sem, at interdum magna augue eget diam. Vestibulum ante
+                                        ipsum primis in faucibus. </p>
+                                </div>
+                            </div>
+                            <div class="accordion">
+                                <p class="accordion-header">Our Services</p>
+                                <div class="accordion-body">
+                                    <p>Curabitur sit amet mauris. Morbi in dui quis est pulvinar ullamcorper. Nulla
+                                        facilisi. Integer lacinia sollicitudin massa. Cras metus. Sed aliquet risus a
+                                        tortor. Integer id quam. </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="accordion-type-2">
+                <div class="row">
+                    <div class="col accordion-column">
+                        <div class="accordion-wrapper">
+                            <div class="accordion">
+                                <p class="accordion-header"><span>01</span>About Us</p>
+                                <div class="accordion-body" style="display: none;">
+                                    <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos
+                                        himenaeos. Nam nec ante sed lacinia, urna non tincidunt mattis, tortor neque
+                                        adipiscing diam, a cursus earum esse ex explicabo, facilis harum incidunt
+                                        laudantium minus modi molestias nostrum ratione.</p>
+                                </div>
+                            </div>
+                            <div class="accordion">
+                                <p class="accordion-header"><span>02</span>Marketing Strategy</p>
+                                <div class="accordion-body" style="display: none;">
+                                    <p>Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem at dolor.
+                                        Maecenas mattis. Sed convallis tristique earum esse ex explicabo, facilis harum
+                                        incidunt laudantium minus modi molestias nostrum ratione
+                                        sem. Proin ut ligula vel nunc egestas
+                                        porttitor. Morbi lectus risus, iaculis convallis. </p>
+                                </div>
+                            </div>
+                            <div class="accordion">
+                                <p class="accordion-header"><span>03</span>Development Experience</p>
+                                <div class="accordion-body" style="display: none;">
+                                    <p>Sed lectus. Integer euismod lacus luctus magna. Quisque cursus, metus vitae
+                                        pharetra
+                                        auctor, sem massa mattis sem, earum esse ex explicabo, facilis harum incidunt
+                                        laudantium minus modi molestias nostrum ratione at interdum magna augue eget
+                                        diam. Vestibulum ante
+                                        ipsum primis in faucibus. </p>
+                                </div>
+                            </div>
+                            <div class="accordion">
+                                <p class="accordion-header"><span>04</span>Our Services</p>
+                                <div class="accordion-body">
+                                    <p>Curabitur sit amet mauris. Morbi earum esse ex explicabo, facilis harum incidunt
+                                        laudantium minus modi molestias nostrum ratione in dui quis est pulvinar
+                                        ullamcorper. Nulla
+                                        facilisi. Integer lacinia sollicitudin massa. Cras metus. Sed aliquet risus a
+                                        tortor. Integer id quam. </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+                    
                 </div>
             </div>
         </div>
