--- a/homenet-rental-calc.html
+++ b/homenet-rental-calc.html
@@ -7,6 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" href="assets/favicon.ico">
     <title>Homenet Info Page - Elements</title>
+    <!-- Google Fonts -->
+    <link rel="dns-prefetch" href="//fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+    <link href="https://fonts.googleapis.com/css?family=Muli:300,400,500,600,700|Montserrat:300,400,500,600,700" rel="stylesheet">
+    <!-- Chinese Google Font load for zh only -->
+    <link href="https://fonts.googleapis.com/css?family=Noto+Serif+SC:300,400,500,700" rel="stylesheet">
     <!-- Homenet CSS -->
     <link rel="stylesheet" href="assets/css/bootstrap4-add-on.css">
     <link rel="stylesheet" href="assets/css/rentall-bootstrap.css">
@@ -14,9 +20,6 @@
     <link rel="stylesheet" href="assets/css/homenet-footer.css">
     <link rel="stylesheet" href="assets/css/content-pg-bs4-big.css">
     <link rel="stylesheet" href="assets/css/all-title-big.css">
-
-
-
     <link rel="stylesheet" href="assets/css/calculator.css">
     <link rel="stylesheet" href="assets/css/jquery-ui.css">
 
@@ -24,10 +27,6 @@
     <link rel="stylesheet" href="assets/css/aos.css">
     <!-- Swiper CSS -->
     <link rel="stylesheet" href="assets/css/swiper.min.css">
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Muli:200,300,400,500,600,700|Montserrat:300,400,500,600,700" rel="stylesheet">
-    <!-- Chinese Google Font load for zh only -->
-    <link href="https://fonts.googleapis.com/css?family=Noto+Serif+SC:300,400,500,700" rel="stylesheet">
 </head>
 
 <body>
@@ -731,28 +730,21 @@
     </div>
     <!-- jQuery -->
     <script src="assets/js/vendor/jquery-3.3.1.min.js"></script>
-    <!-- Bootstrap js -->
-    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
     <!-- homenet navigation js -->
     <script src="assets/js/homenet.menu.js"></script>
     <!-- homenet return top js -->
     <script src="assets/js/returntop.js"></script>
-    <!-- AOS -->
-    <script src="assets/js/aos.js"></script>
+
     <!-- ImageLoaded -->
     <script src="assets/js/imagesloaded.pkgd.min.js"></script>
-    <!-- Isotope -->
-    <script src="assets/js/isotope.pkgd.min.js"></script>
-    <!-- homenet Content JS-file -->
-    <script src="assets/js/main.js"></script>
-    <!-- CONTENT PAGES -->
     <!-- Parallax -->
     <script src="assets/js/parallax.js"></script>
     <!-- Waypoints -->
     <script src="assets/js/jquery.waypoints.min.js"></script>
+    <!-- homenet Content JS-file -->
+    <script src="assets/js/main.js"></script>
 
-
-    
     <!-- Calculator script -->
     <script type="text/javascript" src="jquery-ui.js"></script>
     <script type="text/javascript" src="assets/js/calculator/rentInfo-new-min.js"></script>
