--- a/homepage/index.html
+++ b/homepage/index.html
@@ -153,7 +153,7 @@
                 <div class="sec6_col">
                     <div class="rental-stamp">
                     <figure class="sec6_pic"><img src="images/rent-stamp-duty-calc.png" alt="" /></figure>
-                    <h3>RENTAL STAMP DUTY CALCULATOR</h3>
+                    <h3>Rental Stamp Duty Calculator</h3>
                     <input type="checkbox" id="rentalstamp_toggle" class="sec6_toggle" />
                     <p>
                     Calculate Hong Kong Stamp Duty for rentals in a few simple steps.
@@ -163,14 +163,14 @@
                     Programmed to include any free days, calculating Stamp Duty for Hong Kong leases have never been easier.</span>
                     </p>
                     <label for="rentalstamp_toggle"></label>
-                    <a href="">calculate NOW</a>
+                    <a href="">Calculate Now</a>
                     </div>
                 </div>
                 
                 <div class="sec6_col">
                     <div class="sale-stamp">
                     <figure class="sec6_pic"><img src="images/sales-stamp-duty-calc.png" alt="" /></figure>
-                    <h3>SALES STAMP DUTY CALCULATOR</h3>
+                    <h3>Sales Stamp Duty Calculator</h3>
                     <input type="checkbox" id="salesstamp_toggle" class="sec6_toggle" />
                     <p>
                    Calculating Hong Kong stamp duty for Property Sales made easy.
