--- a/homepage/index.html
+++ b/homepage/index.html
@@ -49,7 +49,7 @@
                     <div class="text_container">
                         <p>
                             Covering all of Hong Kong, our Neighbourhood
-                            specialists come with over <span><b>+3YRS EXPERIENCE in each location.</b></span>
+                            specialists come with over <span><b>+3yrs Experience in each location.</b></span>
                         </p>
                         <p>
                             Only selecting attentive and trusted Agents means
@@ -71,10 +71,10 @@
                     <div class="text_container">
                         <p>
                             Our real-time chat system allows Owners to keep
-                            their contact details <span><b>PRIVATE & SECURE.</b></span>
+                            their contact details <span><b>Private & Secure.</b></span>
                         </p>
                         <p>
-                            <span><b>ALL OWNERS LIST FOR FREE</b></span> and can choose to what contact information they wish to disclose. No more risk of email spam and unscrupulous calls from listing online.
+                            <span><b>All Owners List For Free</b></span> and can choose to what contact information they wish to disclose. No more risk of email spam and unscrupulous calls from listing online.
                         </p>
                     </div>
                 </div>
