--- a/homenet-sections.html
+++ b/homenet-sections.html
@@ -357,7 +357,9 @@
                             </div>
                         </div>
                     </div>
-                    <div class="bs4 col-lg-6 content gray-section resposive-content aos-init aos-animate" data-aos="fade-right" data-aos-delay="200" data-aos-anchor-placement="top-bottom" data-aos-easing="ease-in-out" data-aos-duration="700">
+</div>
+                <div class="bs4 row">
+                    <div class="bs4 col-lg-6 content gray-section aos-init aos-animate resposive-content" data-aos="fade-right" data-aos-delay="200" data-aos-anchor-placement="top-bottom" data-aos-easing="ease-in-out" data-aos-duration="700">
                         <div class="content-wrapper right-align-content">
                             <h3 class="section-title">Best Digital Production</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusantium, animi architecto
@@ -372,6 +374,8 @@
                     <div class="bs4 col-lg-6 image color_overlay aos-init aos-animate" data-aos="fade-left" data-aos-delay="100" data-aos-anchor-placement="top-bottom" data-aos-easing="ease-in-out" data-aos-duration="700">
                         <img src="https://picsum.photos/id/1068/1332/888" alt="Img Name Goes Here!">
                     </div>
+</div>
+                <div class="bs4 row">
                     <div class="bs4 col-lg-6 image color_overlay aos-init" data-aos="fade-right" data-aos-delay="100" data-aos-anchor-placement="top-bottom" data-aos-easing="ease-in-out" data-aos-duration="700">
                         <img src="https://picsum.photos/id/1068/1332/888" alt="Img Name Goes Here!">
                     </div>
@@ -387,6 +391,8 @@
                             </div>
                         </div>
                     </div>
+
+
                 </div>
             </div>
         </section>
@@ -649,7 +655,7 @@
                                     <i class="fa fa-th"></i>
                                 </div>
                                 <div class="content-wrapper d-flex flex-column">
-                                    <h5>Different Layout</h5>
+                                    <h3>Different Layout</h3>
                                     <p>Maenas aliquet mollis lectus. Vivamus conctetuer risus et tortor lorem in, nibh ipsum
                                         aptent taciti sociosqu ad.</p>
                                 </div>
@@ -659,7 +665,7 @@
                                     <i class="fas fa-terminal"></i>
                                 </div>
                                 <div class="content-wrapper d-flex flex-column">
-                                    <h5>Code Quality</h5>
+                                    <h3>Code Quality</h3>
                                     <p>Maecenas aliquet mollis lectus. Vivamus consectetuer risus et tortor lorem in, nibh
                                         ipsum aptent taciti sociosqu ad.</p>
                                 </div>
@@ -669,7 +675,7 @@
                                     <i class="fa fas fa-phone-volume"></i>
                                 </div>
                                 <div class="content-wrapper d-flex flex-column">
-                                    <h5>Excellent Support</h5>
+                                    <h3>Excellent Support</h3>
                                     <p>Maecenas aliquet mollis lectus. Vivamus consectetuer risus et tortor lorem in, nibh
                                         ipsum aptent taciti sociosqu ad.</p>
                                 </div>
@@ -847,14 +853,12 @@
                                     <div class="tab-trigger-wrapper">
                                         <h6 class="tab-trigger" data-tab=".tab-body-3">How we are working?</h6>
                                     </div>
-                                    <!--
                                 <div class="tab-trigger-wrapper">
                                     <h6 class="tab-trigger" data-tab=".tab-body-4">What services we offer?</h6>
                                 </div>
                                 <div class="tab-trigger-wrapper">
                                     <h6 class="tab-trigger" data-tab=".tab-body-5">How to contact us?</h6>
                                 </div>
-                                 -->
                                 </div>
                             </div>
                             <div class="tabs-body-wrapper">
@@ -928,7 +932,7 @@
                                     <div class="bs4 row">
                                         <div class="bs4 col-xl-6 content-side tab-side left-side d-flex align-items-center">
                                             <div>
-                                                <h3 class="title">What services we offer?</h3>
+                                                <h3 class="page-section-title">What services we offer?</h3>
                                                 <p class="description">Sed aliquet risus a tortor. Integer id quam. Morbi
                                                     mi.
                                                     Quisque
@@ -953,7 +957,7 @@
                                         </div>
                                         <div class="bs4 col-xl-6 content-side tab-side right-side align-items-center">
                                             <div>
-                                                <h3 class="title">How to contact us?</h3>
+                                                <h3 class="page-section-title">How to contact us?</h3>
                                                 <p class="description">Morbi lectus risus, iaculis vel, suscipit quis,
                                                     luctus non,
                                                     massa. Fusce ac turpis quis ligula lacinia aliquet mauris ipsum. Nulla
