--- a/info-page.html
+++ b/info-page.html
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="assets/css/content-pg-bs4-big.css">
     <link rel="stylesheet" href="assets/css/all-title-big.css">
     <link rel="stylesheet" href="assets/css/homenet-contact.css">
+    <link rel="stylesheet" href="assets/css/homenet-text.css">
     <!-- Page effects CSS -->
     <link rel="stylesheet" href="assets/css/aos.css">
     <!-- Swiper CSS -->
@@ -461,7 +462,7 @@
         <header class="page-header parallax-window bg_img dark_overlay" data-src="assets/images/content/content.jpg">
             <div class="bs4 container pg-header-wrapper d-flex flex-column justify-content-end">
                 <div class="pg-header-elements text-left">
-                    <h1 class="content-page-title text-left">Types of Property in Hong Kong</h1>
+                    <h1 class="content-page-title text-left title-dot">Types of Property in Hong Kong</h1>
                     <nav class="title-breadcrumb" aria-label="bs4 breadcrumb">
                         <ol class="bs4 breadcrumb breadcrumb-small justify-content-start mb-0 px-0">
                             <li class="breadcrumb-item text-uppercase"><a href="#">Home</a></li>
@@ -503,12 +504,12 @@
                     </div>
                     <div class="bs4 col-lg-9 order-lg-1 pr-lg-3 main-content">
                         <div class="column-element white-section">
-                            <h2 class="page-section-title text-left">Hong Kong Apartments</h2>
+                            <h2 class="page-section-title text-left title-dot">Hong Kong Apartments</h2>
                             <h3 class="page-sub-title text-left bottom-line">Chinese Walk-up</h3>
                             <p>Apartments for rent in Hong Kong are generally in a good and tidy condition, apartments on offer are either fully furnished, partially furnished or unfurnished. Depending on the price and property, the décor and furnishings of will differ so it is important to take note of what items of furniture, appliances and fittings are missing but necessary for your daily living. Apartment developments vary in terms of the facilities and security it provides, so if there are any amenities you require don’t hesitate to enquire about them.</p>
                             <br>
                             <div class="section-dark-bg">
-                                <h2 class="page-section-title text-left">Hong Kong Apartments</h2>
+                                <h2 class="page-section-title text-left title-dot">Hong Kong Apartments</h2>
                                 <p>When viewing an apartment in Hong Kong, things to look out for is whether there is working Air Conditioning available in all rooms and living areas, Air Conditioning is a must in the Hong Kong Summers when temperatures often exceed 31 degrees centigrade with high humidity.</p>
                                 <div class="flip-section right">
                                     <div class="flip-container flip-horizontal click-flip aos-init aos-animate" data-aos="fade-left" data-aos-delay="100" data-aos-anchor-placement="top-bottom" data-aos-easing="ease-in-sine" data-aos-duration="700" style="height: 360px;">
