--- a/rental-stamp-duty-calculator-cn.html
+++ b/rental-stamp-duty-calculator-cn.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cn">
 
 <head>
     <meta charset="UTF-8">
@@ -25,7 +25,7 @@
     <link href="https://fonts.googleapis.com/css?family=Noto+Serif+SC:300,400,500,700" rel="stylesheet">
 </head>
 
-<body>
+<body class="zh-cn">
     <!-- Header -->
     <div class="homenet-header header-shadow header-dark homenet-mega-menu no-sticky">
         <div class="sticky-bar-bg">
@@ -451,12 +451,11 @@
         <header class="page-header parallax-window bg_img dark_overlay" data-src="assets/images/content/content.jpg">
             <div class="bs4 container pg-header-wrapper d-flex flex-column justify-content-end">
                 <div class="pg-header-elements text-left">
-                    <h1 class="content-page-title text-left">Rental Stamp Duty Calculator</h1>
+                    <h1 class="content-page-title text-left">香港租务印花税计算器</h1>
                     <nav class="title-breadcrumb" aria-label="bs4 breadcrumb">
                         <ol class="bs4 breadcrumb breadcrumb-small justify-content-start mb-0 px-0">
-                            <li class="breadcrumb-item text-uppercase"><a href="#">Home</a></li>
-                            <li class="breadcrumb-item text-uppercase"><a href="#">Category</a></li>
-                            <li class="breadcrumb-item text-uppercase active" aria-current="page">Page single</li>
+                            <li class="breadcrumb-item text-uppercase"><a href="#">首页</a></li>
+                            <li class="breadcrumb-item text-uppercase active" aria-current="page">香港租务印花税计算器</li>
                         </ol>
                     </nav>
                     <div class="burger-container">
@@ -482,10 +481,10 @@
                                 <div class="text-center text-md-left bs4 col-sm-9 col-md-6 col-lg-12">
                                     <div class="list-group list-group-flush">
                                         <a href="#" class="list-group-item list-group-item-action active">
-                                            HK Property Buying Guide
+                                            香港租务印花税计算器
                                         </a>
-                                        <a href="#" class="list-group-item list-group-item-action">Types of Property in Hong Kong</a>
-                                        <a href="#" class="list-group-item list-group-item-action">Most Expensive Apartments</a>
+                                        <a href="#" class="list-group-item list-group-item-action">香港买卖印花税计算器</a>
+                                        <a href="#" class="list-group-item list-group-item-action">物业按揭计算器(可调整利率)</a>
                                     </div>
                                 </div>
                             </div>
@@ -500,13 +499,13 @@
                                             <div id="stamp_duty">
                                                 <div class="empty-total"></div>
                                             </div>
-                                            <div class="result-desc"><a href="#rentstamp">Payable by each party*</a></div>
+                                            <div class="result-desc"><a href="#rentstamp">各方须付之印花税*</a></div>
                                         </div>
                                     </div>
                                     <div class="bs4 col-12 col-sm parts calc-cell">
                                         <div class="bs4 row no-gutters">
                                             <div class="bs4 col-6 col-sm parts-result" id="average_annual">
-                                                <span class="empty min">Fill in the details below to start calculating</span>
+                                                <span class="empty min">请填写以下计算所需资料</span>
                                             </div>
                                             <div class="bs4 col-6 col-sm parts-result" id="at_rate"></div>
                                             <div class="bs4 col-12 col-sm parts-result" id="total_stamp_duty"></div>
@@ -516,18 +515,18 @@
                                 <div class="calc-input calc-cell">
                                     <div class="bs4 row no-gutters rent-row-1">
                                         <div class="bs4 col-12 calc-rent-col rental-1 p-0">
-                                            <div class="left-input">Monthly rent HKD$</div><input id="rent" type="text" value=",000" />
+                                            <div class="left-input">月租 HKD$</div><input id="rent" type="text" value=",000" />
                                         </div>
                                         <div class="bs4 col-12 calc-rent-col rental-2 p-0">
-                                                <div class="term">Tenancy Term</div><input id="terms" type="text" value="24"/>months 
+                                                <div class="term">租期</div><input id="terms" type="text" value="24"/>个月
                                         </div>
                                     </div>
                                     <div class="bs4 row no-gutters rent-row-2">
                                         <div class="bs4 col-12 calc-rent-col rental-1 p-0">
-                                            <div class="left-input">Tenancy start date</div><input id="start-date" type="text" placeholder="enter if any rent free" value=""/>
+                                            <div class="left-input">起租日期</div><input id="start-date" type="text" placeholder="如有，请提供" value=""/>
                                         </div>
                                         <div class="bs4 col-12 calc-rent-col rental-2 p-0">
-                                                <div class="term">Rent free term</div><input id="total-rentfree" type="text"/>days
+                                                <div class="term">免租期</div><input id="total-rentfree" type="text"/>日
                                         </div>
                                     </div>
                                 </div>
@@ -541,43 +540,45 @@
                                         <svg xmlns="http://www.w3.org/2000/svg" width="21px" height="21px" fill="#fff" viewBox="0 446.57 1530.71 1530.54">
                                             <path d="M765.38 446.57C342.62 446.57 0 789.07 0 1211.84c0 422.65 342.62 765.27 765.38 765.27 422.48 0 765.33-342.62 765.33-765.27.06-422.77-342.84-765.27-765.33-765.27zm505.05 865.58l-343.2 343.14c-44.6 44.7-114.54 46.82-156.34 5.08-41.7-41.75-39.53-111.68 5.08-156.24l164.17-164.28h-607.7c-59.24 0-107.04-47.96-107.14-106.98 0-59.08 47.9-106.93 107.14-106.93h610.84L778.24 961.02c-43.85-43.96-45.74-113.57-3.78-155.26 41.75-41.7 111.14-40.02 155.05 3.94l338.66 338.5c1.46 1.46 2.54 3.35 3.78 4.75 1.24 1.08 2.54 1.78 3.56 2.92 41.8 41.52 39.58 111.57-5.08 156.28z"></path>
                                         </svg>
-                                        <span>Calculate</span></button>
+                                        <span>计算</span></button>
                                     </div>
                                     <div class="bs4 col footer-note">
-                                        Tip: Simply enter the "Monthly rental" and "Tenancy term" to calculate the stamp duty. For any "Rent free term" the "Tenancy start date" is necessary. Cheques should be made payable to "The Government of the HKSAR".
+                                        提示: 只需输入“月租”和“租期”来计算印花税。若计算任何“免租期”, 必须填写"起租日期"。支票抬头为“香港特别行政区政府”。
                                     </div>
                                 </div>
                                 <div class="calc-table" id="rentstamp">
-                                    <div class="calc-header">Rental Stamp duty schedule</div>
+                                    <div class="calc-header">
+印花税计算表</div>
 
 
                                     <div id="stamp_duty_box" class="table-content">
                                         <div class="bs4 row calc-table-head justify-content-center">
-                                            <div class="bs4 col-6 p-0">Term of tenancy</div>
-                                            <div class="bs4 col-6 stamp-col col-two">Stamp Duty Rate</div>
+                                            <div class="bs4 col-6 p-0">年期</div>
+                                            <div class="bs4 col-6 stamp-col col-two">收费</div>
                                         </div>
                                         <div>
                                             <div class="bs4 row no-gutters justify-content-center">
-                                                <div class="bs4 col-6 p-0">Less than or equal to 1yr</div>
-                                                <div class="bs4 col-6 col-two">0.25% of the annual or average annual rent</div>
+                                                <div class="bs4 col-6 p-0">少于1年或1年</div>
+                                                <div class="bs4 col-6 col-two"> 租期内须缴租金总额的 0.25%</div>
                                             </div>
                                         </div>
                                         <div>
                                             <div class="bs4 row no-gutters justify-content-center">
-                                                <div class="bs4 col-6 p-0">Exceeding 1 year but not exceeding 3 years</div>
-                                                <div class="bs4 col-6 col-two">0.5% of the annual or average annual rent</div>
+                                                <div class="bs4 col-6 p-0">超逾1年但不超逾3年</div>
+                                                <div class="bs4 col-6 col-two">年租或平均年租的 0.5%</div>
                                             </div>
                                         </div>
                                         <div>
                                             <div class="bs4 row no-gutters justify-content-center">
-                                                <div class="bs4 col-6 p-0">Exceeding 3 years</div>
-                                                <div class="bs4 col-6 col-two">1% of the annual or average annual rent</div>
+                                                <div class="bs4 col-6 p-0">
+超逾3年</div>
+                                                <div class="bs4 col-6 col-two">年租或平均年租的 1%</div>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="note">
-                                        *Charge for a $5 duplication fee added to the total (Total + $5 is divided between 2 parties).<br>
-                                        **Annual rent, average annual rent & total rent to be rounded-up to the nearest HKD$100.
+                                        *每份副本加$ 5之重复费于用印花税总额。<br>
+                                        **将年租／平均年租／租金总值调高至最接近的$100计算。
                                     </div>
                                 </div>
 
@@ -747,7 +748,7 @@
     
     <!-- Rental Calculator Script -->
     <script type="text/javascript" src="assets/js/jquery-ui.js"></script>
-    <script type="text/javascript" src="assets/js/calculator/rentInfo-new-min.js"></script>
-    <script type="text/javascript" src="assets/js/calculator/rentInfo-page-min.js"></script>
+    <script type="text/javascript" src="assets/js/calculator/rent-calc-zh.js"></script>
+    <script type="text/javascript" src="assets/js/calculator/rent-calc-page-zh.js"></script>
 </body>
 </html>
