fix bootstrap nav

--- a/rental-stamp-duty-calculator-zh.html
+++ b/rental-stamp-duty-calculator-zh.html
@@ -725,6 +725,8 @@
     </div>
     <!-- jQuery -->
     <script src="assets/js/vendor/jquery-3.3.1.min.js"></script>
+    <!-- Bootstrap js -->
+    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <!-- AOS -->
     <script src="assets/js/aos.js"></script>
     <!-- Parallax -->
