update font weights

--- a/homenet-sections.html
+++ b/homenet-sections.html
@@ -350,10 +350,7 @@
                     <div class="bs4 col-lg-6 content gray-section aos-init" data-aos="fade-left" data-aos-delay="200" data-aos-anchor-placement="top-bottom" data-aos-easing="ease-in-out" data-aos-duration="700">
                         <div class="content-wrapper left-align-content">
                             <h3 class="section-title">Unique Websites</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A accusantium, animi architecto
-                                asperiores commodi debitis doloribus ex expedita incidunt nemo neque nesciunt officia omnis
-                                porro possimus repellendus, sunt vel veniam. Molestiae nam nesciunt nobis
-                                odio placeat quaerat quas doloribus ex.</p>
+                            <p>Apartments for rent in Hong Kong are generally in a good and tidy condition, apartments on offer are either fully furnished, partially furnished or unfurnished. Depending on the price and property, the décor and furnishings of will differ so it is important to take note of what items of furniture, appliances and fittings are missing but necessary for your daily living. Apartment developments vary in terms of the facilities and security it provides, so if there are any amenities you require don’t hesitate to enquire about them.</p>
                             <div class="btn-wrap d-flex">
                                 <a href="#" class="homenet-btn button-round">Read more <i class="fa fa-angle-right"></i></a>
                             </div>
@@ -750,20 +747,12 @@
                 <div class="bs4 row smaller-font">
                     <div class="bs4 col-md-8">
                         <div class="column-element white-section">
-                            <p>Ab delectus eius eum hic neque vero.
-                                A, illo ipsa. Lorem ipsum dolor sit amet, conctetur aisicing elit. Accusantium, architecto
-                                aspernatur atque debitis, deleniti deserunt enim nobis nostrum officiis. Lorem ipsum dolor
-                                sit
-                                amet, consectetur adipisicing elit. Alias beatae dolorum excepturi neque obcaecati
-                                recusandae,
-                                sequi voluptas? Aut, deleniti eius labore laudantium maiores.</p>
+                            <p>Location wise, you should also consider the property’s proximity to nearby Supermarkets or Wet Markets, walking distances from different properties to these amenities may differ significantly and don’t forget amplified with the weight of groceries. Although the proximity to public transportation is often not a major concern since Hong Kong has a well established public transportation system.</p>
                         </div>
                     </div>
                     <div class="bs4 col-md-4">
                         <div class="column-element white-section">
-                            <p>Ab delectus eius eum hic neque vero.
-                                A, illo ipsa. Lorem ipsum dolor sit amet, conctetur aisicing elit. Accusantium, architecto
-                                aspernatur atque debitis, deleniti deserunt.</p>
+                            <p>提示: 只需輸入“月租”和“租期”來計算印花稅。若計算任何“免租期”, 必須填寫"起租日期"。支票抬頭為“香港特別行政區政府”。</p>
                         </div>
                     </div>
                 </div>
