--- a/info-page-mortgage.html
+++ b/info-page-mortgage.html
@@ -18,9 +18,16 @@
     <!-- Swiper CSS -->
     <link rel="stylesheet" href="assets/css/swiper.min.css">
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Muli:200,300,400,500,600,700|Montserrat:300,400,500,600,700" rel="stylesheet">
-    <!-- Chinese Google Font load for zh only -->
-    <link href="https://fonts.googleapis.com/css?family=Noto+Serif+SC:300,400,500,700" rel="stylesheet">
+<link rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin />
+
+<link rel="preload"
+      as="style"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Muli:wght@200;300;400;500;600;700&display=swap" />
+
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Muli:wght@200;300;400;500;600;700&display=swap" media="print" onload="this.media='all'" ">
+
 </head>
 
 <body>
