--- a/rental-stamp-duty-calculator.html
+++ b/rental-stamp-duty-calculator.html
@@ -727,7 +727,7 @@
     <!-- jQuery -->
     <script src="assets/js/vendor/jquery-3.3.1.min.js"></script>
     <!-- Bootstrap js -->
-    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="assets/js/bootstrap.bundle.min.js"></script>
     <!-- AOS -->
     <script src="assets/js/aos.js"></script>
     <!-- Parallax -->
