--- a/content-flip-cards.html
+++ b/content-flip-cards.html
@@ -476,7 +476,7 @@
                         <div class="column-element white-section">
                             <div class="row justify-content-center">
                                 <div class="text-center align-self-center col-sm-12 col-md-3 col-lg-12">
-                                    <img src="assets/images/features-icon-02.png" alt="features" width="80" height="80"></div>
+                                    <img src="assets/svg/info_page/side_nav/calc.svg" alt="hong kong property calculators"></div>
                                 <div class="text-center text-md-left col-sm-9 col-md-6 col-lg-12">
                                     <div class="list-group list-group-flush">
                                         <a href="#" class="list-group-item list-group-item-action active">
