--- a/info-page.html
+++ b/info-page.html
@@ -17,6 +17,7 @@
     <!-- Homenet CSS -->
     <link rel="stylesheet" href="assets/css/rentall-bootstrap.css">
     <link rel="stylesheet" href="assets/css/homenet-bootstrap4.css">
+    <link rel="stylesheet" href="assets/css/calculator.css">
     <link rel="stylesheet" href="assets/css/homenet-navbar.css">
     <link rel="stylesheet" href="assets/css/homenet-footer.css">
 
@@ -457,7 +458,7 @@
         <header class="page-header parallax-window bg_img dark_overlay" data-src="assets/images/content/content.jpg">
             <div class="bs4 container pg-header-wrapper d-flex flex-column justify-content-end">
                 <div class="pg-header-elements text-left">
-                    <h1 class="content-page-title text-left title-dot">Types of Property in Hong Kong</h1>
+                    <h1 class="content-page-title text-left title-dot">Hong Kong Property Buying Guide</h1>
                     <nav class="title-breadcrumb" aria-label="bs4 breadcrumb">
                         <ol class="bs4 breadcrumb breadcrumb-small justify-content-start mb-0 px-0">
                             <li class="breadcrumb-item text-uppercase"><a href="#">Home</a></li>
@@ -483,8 +484,8 @@
                     <div class="bs4 col-lg-3 order-lg-2 pl-lg-2 collapse dont-collapse-sm" id="content-nav">
                         <div class="column-element white-section">
                             <div class="bs4 row justify-content-center">
-                                <div class="text-center align-self-center bs4  col-sm-12 col-md-3 col-lg-12">
-                                    <img src="assets/images/features-icon-02.png" alt="features" width="80" height="80"></div>
+                                <div class="side-nav-icon text-center align-self-center bs4  col-sm-12 col-md-3 col-lg-12">
+                                    <img src="assets/svg/info_page/side_nav/pages.svg" alt="hong kong property calculators"></div>
                                 <div class="text-center text-md-left bs4 col-sm-9 col-md-6 col-lg-12">
                                     <div class="list-group list-group-flush">
                                         <a href="#" class="list-group-item list-group-item-action active">
