--- a/rental-stamp-duty-calculator.html
+++ b/rental-stamp-duty-calculator.html
@@ -20,9 +20,13 @@
     <!-- Swiper CSS -->
     <link rel="stylesheet" href="assets/css/swiper.min.css">
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Muli:200,300,400,500,600,700|Montserrat:300,400,500,600,700" rel="stylesheet">
-    <!-- Chinese Google Font load for zh only -->
-    <link href="https://fonts.googleapis.com/css?family=Noto+Serif+SC:300,400,500,700" rel="stylesheet">
+    <link rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin />
+    <link rel="preload"
+      as="style"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Muli:wght@200;300;400;500;600;700&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&family=Muli:wght@200;300;400;500;600;700&display=swap" media="print" onload="this.media='all'">
 </head>
 
 <body>
@@ -470,14 +474,14 @@
                 </div>
             </div>
         </header>
-        <section class="content-section dark-gray-section">
+        <section class="calculator content-section dark-gray-section">
             <div class="bs4 container">
                 <div class="bs4 row no-gutters">
                     <div class="bs4 col-lg-3 order-lg-2 pl-lg-2 collapse dont-collapse-sm" id="content-nav">
                         <div class="column-element white-section">
                             <div class="bs4 row justify-content-center">
-                                <div class="text-center align-self-center bs4  col-sm-12 col-md-3 col-lg-12">
-                                    <img src="assets/images/features-icon-02.png" alt="features" width="80" height="80"></div>
+                                <div class="side-nav-icon text-center align-self-center bs4  col-sm-12 col-md-3 col-lg-12">
+                                    <img src="assets/svg/info_page/side_nav/calc.svg" alt="hong kong property calculators"></div>
                                 <div class="text-center text-md-left bs4 col-sm-9 col-md-6 col-lg-12">
                                     <div class="list-group list-group-flush">
                                         <a href="#" class="list-group-item list-group-item-action active">Rental Stamp Duty Calculator
