--- a/homenet-sections.html
+++ b/homenet-sections.html
@@ -25,6 +25,7 @@
     <!-- Page effects CSS -->
     <link rel="stylesheet" href="assets/css/aos.css">
     <link rel="stylesheet" href="assets/css/swiper.min.css">
+    <link rel="stylesheet" href="assets/css/magnific-popup.css">
 </head>
 
 <body class="en-US">
@@ -81,6 +82,100 @@
         <!-- Simple Background -->
         <section class="simple-background parallax-window default_overlay" data-src="assets/images/content/content.jpg" data-speed="0.4">
         </section>
+
+    <!-- [4] Carousel Gallery NOTE ONLY 1 SWIPER PER PAGE  -->
+    <section class="carousel-gallery">
+        <div class="container-fluid">
+            <div class="row">
+               <div class="col">
+                   <section class="small-section white-section">
+                       <div class="swiper-container swiper-gallery no-link"
+                            data-aos="fade-up"
+                            data-aos-delay="400"
+                            data-aos-anchor-placement="top-bottom"
+                            data-aos-easing="ease-in-out"
+                            data-aos-duration="600">
+                           <div class="swiper-wrapper popup-gallery">
+                               <div class="swiper-slide">
+                                   <a href="http://via.placeholder.com/1920x1280" class="image-item" class="item-wrapper" >
+                                       <img src="http://via.placeholder.com/1920x1280" alt="" class="img-fluid">
+                                   </a>
+                               </div>
+                               <div class="swiper-slide">
+                                   <a href="http://via.placeholder.com/1920x1280" class="image-item" class="item-wrapper" >
+                                       <img src="http://via.placeholder.com/1920x1280" alt="" class="img-fluid">
+                                   </a>
+                               </div>
+                               <div class="swiper-slide">
+                                   <a href="http://via.placeholder.com/1920x1280" class="image-item" class="item-wrapper" >
+                                       <img src="http://via.placeholder.com/1920x1280" alt="" class="img-fluid">
+                                   </a>
+                               </div>
+                               <div class="swiper-slide">
+                                   <a href="http://via.placeholder.com/1920x1280" class="image-item" class="item-wrapper" >
+                                       <img src="http://via.placeholder.com/1920x1280" alt="" class="img-fluid">
+                                   </a>
+                               </div>
+                           </div>
+            <div class="swiper-pagination-bullets-default"></div>
+                           <div class="swiper-button-prev-portfolio"><i class="fa fa-angle-left"></i></div>
+                           <div class="swiper-button-next-portfolio"><i class="fa fa-angle-right"></i></div>
+                       </div>
+                   </section>
+               </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Carousel Showcase NOTE ONLY 1 SWIPER PER PAGE -->
+    <section class="carousel-showcase">
+        <div class="container-fluid">
+            <div class="row">
+               <div class="col">
+                   <section class="small-section white-section">
+                       <div class="swiper-container swiper-showcase no-link"
+                            data-aos="fade-up"
+                            data-aos-delay="400"
+                            data-aos-anchor-placement="top-bottom"
+                            data-aos-easing="ease-in-out"
+                            data-aos-duration="600">
+                           <div class="swiper-wrapper popup-gallery">
+                               <div class="swiper-slide">
+                                   <a href="http://via.placeholder.com/1920x1280" class="image-item" class="item-wrapper" >
+                                       <img src="http://via.placeholder.com/1920x1280" alt="" class="img-fluid">
+                                   </a>
+                               </div>
+                               <div class="swiper-slide">
+                                   <a href="http://via.placeholder.com/1920x1280" class="image-item" class="item-wrapper" >
+                                       <img src="http://via.placeholder.com/1920x1280" alt="" class="img-fluid">
+                                   </a>
+                               </div>
+                               <div class="swiper-slide">
+                                   <a href="http://via.placeholder.com/1920x1280" class="image-item" class="item-wrapper" >
+                                       <img src="http://via.placeholder.com/1920x1280" alt="" class="img-fluid">
+                                   </a>
+                               </div>
+                               <div class="swiper-slide">
+                                   <a href="http://via.placeholder.com/1920x1280" class="image-item" class="item-wrapper" >
+                                       <img src="http://via.placeholder.com/1920x1280" alt="" class="img-fluid">
+                                   </a>
+                               </div>
+                               <div class="swiper-slide">
+                                   <a href="http://via.placeholder.com/1920x1280" class="image-item" class="item-wrapper" >
+                                       <img src="http://via.placeholder.com/1920x1280" alt="" class="img-fluid">
+                                   </a>
+                               </div>
+                           </div>
+                           <div class="swiper-button-prev-portfolio"><i class="fa fa-angle-left"></i></div>
+                           <div class="swiper-button-next-portfolio"><i class="fa fa-angle-right"></i></div>
+                       </div>
+                   </section>
+               </div>
+            </div>
+        </div>
+    </section>
+
+
 
         <!-- Testimonials -->
         <section class="testimonials large-section black_overlay" style="background-image: url('https://i.picsum.photos/id/1026/1920/900.jpg')">
@@ -1137,6 +1232,8 @@
     <script src="assets/js/aos.js"></script>
     <!-- Parallax -->
     <script src="assets/js/parallax.js"></script>
+    <!-- Magnific Lightbox-->
+    <script src="assets/js/jquery.magnific-popup.min.js"></script>
     <!-- homenet navigation js -->
     <script src="assets/js/homenet.menu.js"></script>
     <!-- homenet return top js -->
