--- a/homenet-sections.html
+++ b/homenet-sections.html
@@ -83,7 +83,7 @@
         <section class="simple-background parallax-window default_overlay" data-src="assets/images/content/content.jpg" data-speed="0.4">
         </section>
 
-    <!-- [4] Carousel Gallery NOTE ONLY 1 SWIPER PER PAGE  -->
+    <!-- [4] Carousel Gallery -->
     <section class="carousel-gallery">
         <div class="container-fluid">
             <div class="row">
@@ -127,7 +127,7 @@
         </div>
     </section>
 
-    <!-- Carousel Showcase NOTE ONLY 1 SWIPER PER PAGE -->
+    <!-- [4] Carousel Showcase -->
     <section class="carousel-showcase">
         <div class="container-fluid">
             <div class="row">
@@ -160,8 +160,46 @@
                                        <img src="http://via.placeholder.com/1920x1280" alt="" class="img-fluid">
                                    </a>
                                </div>
+                           </div>
+                           <div class="swiper-button-prev-portfolio"><i class="fa fa-angle-left"></i></div>
+                           <div class="swiper-button-next-portfolio"><i class="fa fa-angle-right"></i></div>
+                       </div>
+                   </section>
+               </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- [4] Carousel Links -->
+    <section class="carousel-links">
+        <div class="container-fluid">
+            <div class="row">
+               <div class="col">
+                   <section class="small-section white-section">
+                       <div class="swiper-container swiper-links"
+                            data-aos="fade-up"
+                            data-aos-delay="400"
+                            data-aos-anchor-placement="top-bottom"
+                            data-aos-easing="ease-in-out"
+                            data-aos-duration="600">
+                           <div class="swiper-wrapper popup-gallery">
                                <div class="swiper-slide">
-                                   <a href="http://via.placeholder.com/1920x1280" class="image-item" class="item-wrapper" >
+                                   <a href="#" class="item-wrapper" >
+                                       <img src="http://via.placeholder.com/1920x1280" alt="" class="img-fluid">
+                                   </a>
+                               </div>
+                               <div class="swiper-slide">
+                                   <a href="#" class="item-wrapper" >
+                                       <img src="http://via.placeholder.com/1920x1280" alt="" class="img-fluid">
+                                   </a>
+                               </div>
+                               <div class="swiper-slide">
+                                   <a href="#" class="item-wrapper" >
+                                       <img src="http://via.placeholder.com/1920x1280" alt="" class="img-fluid">
+                                   </a>
+                               </div>
+                               <div class="swiper-slide">
+                                   <a href="#"  class="item-wrapper" >
                                        <img src="http://via.placeholder.com/1920x1280" alt="" class="img-fluid">
                                    </a>
                                </div>
